--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -140,6 +140,7 @@
 .action-button-container {
     position: absolute;
     bottom: 0;
+    z-index: 1;
     display: flex;
     flex-direction: row;
     justify-content: center;
