--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -56,6 +56,12 @@
                         Settings
                     </button>
                 </div>
+                <div class="sidenav-button">
+                    <mat-icon>help</mat-icon>
+                    <button mat-button [routerLink]="'/about'">
+                        About
+                    </button>
+                </div>
             </div>
             <mat-divider></mat-divider>
             <div class="logout-container">
@@ -128,21 +134,19 @@
 
         <div class="action-button-container">
             <div class="action-button mat-elevation-z8" style="background-color: #FF8A80;" matRipple (click)="refreshClicked()">
-                <mat-icon>refresh</mat-icon>
-                <p *ngIf="currentScreenSize != 'XSmall'" class="section-subtitle">Tap to refresh all or drag each to find a similar option!</p>
-                <p *ngIf="currentScreenSize == 'XSmall'" class="section-subtitle">Tap to refresh </p>
+                <mat-icon>diversity_3</mat-icon>
+                <p *ngIf="currentScreenSize != 'XSmall'" class="section-subtitle">Tap to offer a new supper party!</p>
+                <p *ngIf="currentScreenSize == 'XSmall'" class="section-subtitle">Tap to party! </p>
             </div>
     
             <div class="action-button mat-elevation-z8" style="background-color: #FFD740;" matRipple (click)="refreshClicked()">
-                <mat-icon>refresh</mat-icon>
-                <p *ngIf="currentScreenSize != 'XSmall'" class="section-subtitle">Tap to refresh all or drag each to find a similar option!</p>
-                <p *ngIf="currentScreenSize == 'XSmall'" class="section-subtitle">Tap to refresh </p>
+                <mat-icon>soup_kitchen</mat-icon>
+                <p *ngIf="currentScreenSize != 'XSmall'" class="section-subtitle">Tap to offer some food donation!</p>
+                <p *ngIf="currentScreenSize == 'XSmall'" class="section-subtitle">Tap to donation! </p>
             </div>
             
           </div>
-    
-    
-    
+
         </mat-drawer-container>
    
 </div>
