sdgs doughnut tooltip

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,6 @@
 <div class="about-container">
   <app-toptap></app-toptap>
+  <div class="header-and-subtitle-container">
     <div class="header-container">
       <a routerLink="/home" style="border-radius: 10px;" matRipple  >
         <img src="/assets/images/forkfam_logo.png" style="max-height: 60px; max-width: 40vw; cursor: pointer" alt="">
@@ -10,11 +11,12 @@
              style="max-height: 80px; max-width: 80vw; min-width: 200px; cursor: pointer;" 
              alt="" >
       </a>
-       
     </div>
+    <p style="font-family: Poppins; font-size: 12px; color: rgba(69, 71, 69, 0.47); transform: translateY(-70%);">We at forkfam fully support the Sustainable Development Goals</p>
+  </div>
+   
 
     <div class="content-container">
-     
       <app-sdgs-doughnut></app-sdgs-doughnut>
       <app-sdgs-icons></app-sdgs-icons>
       <h4 ><a href="https://sdgs.un.org/goals" target="_blank" style="font-family: Poppins; font-size: 12px; color: rgba(69, 71, 69, 0.47);; text-decoration: none;" >Learn more about SDGs</a></h4>
