--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -3,21 +3,31 @@
     display: flex;
     flex-grow:0;
     flex-direction: column;
-    align-items:  start;
-    justify-content: start;
+    align-items:  flex-start;
+    justify-content: flex-start;
     border-radius: 50px; /* Adjust the radius to your preference */
     width: 100vw;
     height: 100vh;
 
 }
 
+.header-and-subtitle-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    width: 100%;
+    height: fit-content;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
 .header-container {
     display: flex;
     align-items: center; /* Align items vertically in the center */
-    padding-left: 2%;
-    padding-right: 2%;
-
+    height: 60px;
 }
+
 
 .header-divider {
     content: '';
@@ -31,11 +41,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: 10px;
     background-color: #FFF;
     border-radius: 50px; /* Adjust the radius to your preference */
     width: 100vw;
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.25);
+
 }
 
 
