--- a/src/app/components/sdgs-icons/sdgs-icons.component.html
+++ b/src/app/components/sdgs-icons/sdgs-icons.component.html
@@ -1,8 +1,8 @@
 <div class="grid-container" >
     <mat-grid-list cols="17" rowHeight="4vh"  >
       @for(tile of tiles; track $index) {
-        <mat-grid-tile [colspan]="tile.cols" [rowspan]="tile.rows">
-          <img [src]='tile.data' style="width: 100%; height: 100%;">
+        <mat-grid-tile style="cursor: pointer;" [colspan]="tile.cols" [rowspan]="tile.rows" matRipple>
+          <img [src]='tile.data' style="width: 100%; height: 100%;" >
         </mat-grid-tile>
       }
     </mat-grid-list>
