+sdgs icons animations

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,13 +3,13 @@
   <div class="header-and-subtitle-container">
     <div class="header-container">
       <a routerLink="/home" style="border-radius: 10px;" matRipple  >
-        <img src="/assets/images/forkfam_logo.png" style="max-height: 60px; max-width: 40vw; cursor: pointer" alt="">
+        <img src="/assets/images/forkfam_logo.png" style="max-height: 60px; max-width: 40vw; cursor: pointer" alt="Logo for our app forkfam">
       </a>
       <span class="header-divider"></span>
       <a href="https://sdgs.un.org/goals" target="_blank" style="border-radius: 10px;" matRipple>
         <img src="/assets/images/sdgs/logo_horizontal.png" 
              style="max-height: 80px; max-width: 80vw; min-width: 200px; cursor: pointer;" 
-             alt="" >
+             alt="Logo for the Sustainable Development Goals" >
       </a>
     </div>
     <p style="font-family: Poppins; font-size: 12px; color: rgba(69, 71, 69, 0.47); transform: translateY(-70%);">We at forkfam fully support the Sustainable Development Goals</p>
