--- a/src/app/components/sdgs-icons/sdgs-icons.component.css
+++ b/src/app/components/sdgs-icons/sdgs-icons.component.css
@@ -1,5 +1,11 @@
 .grid-container {
-   
     width: 100vw;
     height: fit-content;
+}
+.float-down {
+    transition: transform 0.3s ease-out;
+}
+  
+.float-down:hover {
+transform: translateY(25px);
 }
