--- a/src/app/components/sdgs-icons/sdgs-icons.component.html
+++ b/src/app/components/sdgs-icons/sdgs-icons.component.html
@@ -1,7 +1,7 @@
 <div class="grid-container" >
-    <mat-grid-list cols="17" rowHeight="4vh"  >
+    <mat-grid-list cols="17" rowHeight="4vh"   >
       @for(tile of tiles; track $index) {
-        <mat-grid-tile style="cursor: pointer;" [colspan]="tile.cols" [rowspan]="tile.rows" matRipple>
+        <mat-grid-tile [@floatUp] class="float-down" style="cursor: pointer;" [colspan]="tile.cols" [rowspan]="tile.rows" matRipple>
           <img [src]='tile.data' style="width: 100%; height: 100%;" >
         </mat-grid-tile>
       }
