--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,13 +14,30 @@
     </div>
     <p style="font-family: Poppins; font-size: 12px; color: rgba(69, 71, 69, 0.47); transform: translateY(-70%);">We at forkfam fully support the Sustainable Development Goals</p>
   </div>
-   
 
+  <mat-drawer-container class="about-container" style="border-radius: 50px;">
+
+    <mat-drawer #drawer class="sidenav">
+      <div class="sidenav-toggle">
+        <button mat-icon-button (click)="drawer.toggle()">
+            <mat-icon>keyboard_arrow_left</mat-icon>
+        </button>
+    </div>
+      <div style=>
+        
+      </div>
+
+
+    </mat-drawer>
     <div class="content-container">
       <app-sdgs-doughnut></app-sdgs-doughnut>
-      <app-sdgs-icons></app-sdgs-icons>
+      <app-sdgs-icons (drawerOpen)="drawer.toggle()"></app-sdgs-icons>
       <h4 ><a href="https://sdgs.un.org/goals" target="_blank" style="font-family: Poppins; font-size: 12px; color: rgba(69, 71, 69, 0.47);; text-decoration: none;" >Learn more about SDGs</a></h4>
-
     </div>
+
+  </mat-drawer-container>
+   
+
+    
 
 </div>
