--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,12 @@
 .background {
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #1DE9B6;
     border-radius: 50px; /* Adjust the radius to your preference */
-    width: 100vw;
-    height: 100vh;
+    width: 99%;
+    height: 100%;
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
-.bubbles {
-   position: absolute;
-    z-index: 0;
-}
+
