--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -45,8 +45,8 @@
 }
 
 .sidenav {
-    padding: 20px;
-    border-radius: 50px; /* Adjust the radius to your preference */
+    border-radius: 10px; /* Adjust the radius to your preference */
+    width: 90%;
   }
 
 .sidenav-toggle {
@@ -54,6 +54,66 @@
     justify-content: flex-end;
     margin-bottom: 2vh;
 }
+
+.sidenav-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2vh;
+    gap:4vh;
+    margin-bottom: 4vh;
+    width: 100%;
+   
+}
+
+.card-title {
+    color: rgba(0, 0, 0, 0.70);
+    text-align: start;
+    font-family: Poppins;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.card-subtitle {
+    color: rgba(69, 71, 69, 0.47);
+    text-align: left;
+    font-family: Poppins;
+}
+
+.flip-container {
+    perspective: 1000px;
+}
+  
+.flipper {
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.front {
+    max-width: 80vw; 
+    max-height: 70vh; 
+    border-radius: 0px 50px 50px 0px;
+    backface-visibility: hidden;
+}
+
+.back {
+    width: 100%;
+    height: 100%;
+    max-width: 100vw; 
+    max-height: 70vh; 
+    border-radius: 0px 50px 50px 0px;
+    backface-visibility: hidden;
+    position: absolute;
+    transform: rotateY(-180deg) translateY(-100%);
+
+}
+
+
+.flip-container.flipped .flipper {
+    transform: rotateY(-180deg);
+  }
 
 
 
