--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -129,9 +129,8 @@
 }
 
 .action-button-container {
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    z-index: 1;
     display: flex;
     flex-direction: row;
     justify-content: center;
