--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -99,7 +99,7 @@
                 <p *ngIf="currentScreenSize != 'XSmall'" class="section-subtitle">Tap to refresh all or drag each to find a similar option!</p>
                 <p *ngIf="currentScreenSize == 'XSmall'" class="section-subtitle">Tap to refresh </p>
               </div>
-              <app-food-radar></app-food-radar>
+              <app-food-radar style="width: 70%;"></app-food-radar>
 
              
             </mat-tab>
@@ -131,7 +131,6 @@
                  </div>
               </mat-tab>
         </mat-tab-group>
-
         <div class="action-button-container">
             <div class="action-button mat-elevation-z8" style="background-color: #FF8A80;" matRipple (click)="refreshClicked()">
                 <mat-icon>diversity_3</mat-icon>
@@ -142,11 +141,11 @@
             <div class="action-button mat-elevation-z8" style="background-color: #FFD740;" matRipple (click)="refreshClicked()">
                 <mat-icon>soup_kitchen</mat-icon>
                 <p *ngIf="currentScreenSize != 'XSmall'" class="section-subtitle">Tap to offer some food donation!</p>
-                <p *ngIf="currentScreenSize == 'XSmall'" class="section-subtitle">Tap to donation! </p>
+                <p *ngIf="currentScreenSize == 'XSmall'" class="section-subtitle">Tap to donate! </p>
             </div>
             
-          </div>
-
+        </div>
         </mat-drawer-container>
+        
    
 </div>
