--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -1,24 +1,27 @@
-<div>
-    
+<div class="start-container">
     <div class="header-container">
-        <div class="image" style="background: url(/assets/images/plate.png), #1DE9B6 50% / cover no-repeat;" >
-            <app-bubbles></app-bubbles>
-        </div>
-        <div class="logo">
-            <img src="/assets/images/forkfam_logo.png" style="max-height: 100px; max-width: 20vw;" alt="">
-        </div>
-        <div class="subtitle">Share food, build a family</div>
+        <app-bubbles style="z-index: 1;"></app-bubbles>
+        <img src="/assets/images/plate.png" style=" z-index: 2; transform: translateX(-80%);">
     </div>
+    <img src="/assets/images/forkfam_logo.png" style="max-height: 100px; margin-left: 10%; overflow: hidden;" alt="">
+    <div class="subtitle" style="margin-left: 10%; overflow: hidden;">Share food, build a family</div>
+    @if(smallDevice) {
+        <div class="button-container" style="margin-left: 10%; overflow: hidden;">
 
-    <div class="button-container">
-        @if(authService.hasToken) {
-            <button mat-fab extended  color="accent" [routerLink]="'/home'"> 
-                Welcome back, {{authService.getDecodedTokenInfo()!.name}}!</button>
-
-            <button mat-fab extended  color="warn" (click)="signOut()"> 
-                Not you? Sign out!</button>
-        } @else {
-            <app-google-sign-in></app-google-sign-in>  
-        }
-    </div>
+            <div class="title">We're still cookin'...</div>
+            <div class="subtitle">Support for small screens will come soon!</div>
+        </div>
+    }@else {
+        <div class="button-container">
+            @if(authService.hasToken) {
+                <button mat-fab extended  color="accent" [routerLink]="'/home'"> 
+                    Welcome back, {{authService.getDecodedTokenInfo()!.name}}!</button>
+                <button mat-fab extended  color="warn" (click)="signOut()"> 
+                    Not you? Sign out!</button>
+            } @else {
+                <app-google-sign-in style="  max-width: 200px; align-self: center;"></app-google-sign-in>  
+            }
+        </div>
+    }
+   
 </div>
